# haw

./: .gitignore  README.md  default_shadcn_theme.css  index.html  postcss.config.mjs  pyproject.toml  vite.config.ts
backend/app/: analytics.py  config.py  database.py  exporting.py  main.py  schemas.py  security.py  serial_service.py
backend/desktop/: main.py
backend/firmware/: windmill_firmware.ino
src/app/: App.tsx
src/app/components/: AlertsCenter.tsx  Analytics.tsx  Dashboard.tsx  DeviceControl.tsx  ExportCenter.tsx  LiveCharts.tsx  LoginScreen.tsx  MaintenancePanel.tsx  PowerAnalysis.tsx  SerialMonitor.tsx  Settings.tsx  Sidebar.tsx  VoltageAnalysis.tsx  WindmillVisualizer.tsx
src/app/components/ui/: sidebar.tsx
src/app/lib/: api.ts
src/imports/pasted_text/: windmill-monitor.txt
src/styles/: theme.css
