[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-windmill-platform"
version = "0.1.0"
description = "Smart Windmill Energy Monitoring & Analytics Platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "email-validator>=2.2",
  "PySide6>=6.7",
  "pyserial>=3.5",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "reportlab>=4.2",
  "scikit-learn>=1.5",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
